# Chicago-Employee-RAG-Agent

./: .gitignore  README.md  docker-compose.yaml  llm-as-judge-evaluator.md  main.py  pyproject.toml  requirements.txt
1.ETL/: employee-data.ipynb
2.ETL-Airflow-Orchestration/: orchestration.py
3.Retrievals/: dense_retrieval.ipynb  graph-retrieval.ipynb  keyword_search.ipynb
4.Agentic_Rag/: chicago_employee_rag.ipynb  tools.py
5.Monitoring&Evaluation/: agent-monitoring&evals.ipynb  evals_tools.py  groundtruth.py  llm-as-a-judge-evals.ipynb
5.Monitoring&Evaluation/studio/: employee_agent.py  langgraph.json
5.Monitoring&Evaluation/studio/.langgraph_api/: .langgraph_ops.pckl
clean_data/: employee_data.csv  employee_data.parquet.brotli
src/: data_loader.py  dense_retrieval.py  graph_retrieval.py  ingestion.py  lexical_retrieval.py
