[project]
name = "chicago-employee-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]>=1.22.1",
    "fastapi>=0.135.3",
    "fastparquet>=2025.12.0",
    "gradio>=6.11.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-graph-retriever>=0.8.0",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.0.10",
    "langgraph-cli[inmem]>=0.4.14",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-sdk>=0.3.9",
    "langsmith>=0.7.12",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "openevals>=0.2.0",
    "pandas>=3.0.1",
    "prometheus-client>=0.24.1",
    "pyarrow>=23.0.1",
    "pyngrok>=8.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
]
